feat: 能力插件基础完成
