# 24.灵境/单词本/openapi.yaml
@@ -1,12 +1,12 @@
-openapi: 3.1.0
+openapi: 3.0.1
 info:
     title: 单词本
     description: 个性化的英文单词本，可以增加、删除和浏览单词本中的单词，背单词时从已有单词本中随机抽取单词生成句子或者段落。
     version: "v1"
 servers:
-    - url: https://autumnfish.cn
+    - url: http://api.900t.cn
 paths:
-    /api/joke/list:
+    /get_wordbook:
         get:
             operationId: getWordbook
             summary: 展示单词列表
@@ -16,21 +16,71 @@ paths:
                     content:
                         application/json:
                             schema:
-                                properties:
-                                    msg:
-                                        description: 单词本单词列表
-                                        type: string
-            x-return-raw:
-                description: 标记当前 API 请求的结果是否经过大模型，当 name 的值不空时，从插件结果中获取具体字段，类型必须 String，直接返回，而不经过大模型。
-                mediaType: application/json
-                name: msg
-                type: string
-# components:
-#     schemas:
-#         aaa:
-#             type: object
-#             required: [msg]
-#             properties:
-#                 msg:
-#                     type: string
-#                     description: 单词本单词列表
+                                $ref: "#/components/schemas/getWordbook"
+    /add_word:
+        post:
+            operationId: addWord
+            summary: 在单词本中添加一个单词
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/addWord"
+            responses:
+                "200":
+                    description: 单词添加成功
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/messageResponse"
+    /delete_word:
+        delete:
+            operationId: deleteWord
+            summary: 从单词本中删除一个单词
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/deleteWord"
+            responses:
+                "200":
+                    description: 单词删除成功
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/messageResponse"
+
+components:
+    schemas:
+        getWordbook:
+            type: object
+            required: [wordbook]
+            properties:
+                wordbook:
+                    type: array
+                    items:
+                        type: string
+                    description: 单词本单词列表
+        addWord:
+            type: object
+            required: [word]
+            properties:
+                word:
+                    type: string
+                    description: 需要添加到单词本中的一个单词
+        deleteWord:
+            type: object
+            required: [word]
+            properties:
+                word:
+                    type: string
+                    description: 需要删除的单词
+        messageResponse:
+            type: object
+            required: [message]
+            properties:
+                message:
+                    type: string
+                    description: 回复信息
